--- a/style.css
+++ b/style.css
@@ -7,18 +7,32 @@ body {
 }
 
 img {
-  transition: .25s;
-  width: 25%;
+  padding: 10%;
+  width: 80%;
 }
 
-img:hover {
-  opacity: 50%;
-}
-
-.image_container {
+.image_container {
   width: 75%;
-  padding: 12.5%;
+  padding-left: 12.5%;
+  padding-right: 12.5%;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.image {
+  width: 25%;
+  transition: .25s;
+  cursor: pointer;
+}
+
+.image p {
+  font-size: 20px;
+}
+
+.image:hover {
+  opacity: 90%;
 }
 
 /*
@@ -56,6 +70,8 @@ MENU STYLES
 .menu{
   background-color: #6c5ce7;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .12), 0 1px 2px 0 rgba(0, 0, 0, .24);
+  position: sticky;
+  top: 0;
 }
 
 .menu__link{
